--- a/packages/plugin-docusaurus-v3/package.json
+++ b/packages/plugin-docusaurus-v3/package.json
@@ -39,7 +39,8 @@
   "devDependencies": {
     "@types/jsdom": "^21.1.6",
     "@types/markdown-it": "^13.0.7",
-    "@types/pako": "^2.0.3"
+    "@types/pako": "^2.0.3",
+    "typescript": "^5.6.3"
   },
   "peerDependencies": {
     "@docusaurus/plugin-content-docs": ">= 3.2.0",
