--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -27,7 +27,7 @@
   },
   "peerDependencies": {
     "@orama/orama": "workspace:*",
-    "@oramacloud/client": "1.3.15"
+    "@oramacloud/client": "^2.1.1"
   },
   "license": "Apache-2.0",
   "devDependencies": {
