--- a/packages/plugin-astro/package.json
+++ b/packages/plugin-astro/package.json
@@ -1,8 +1,14 @@
 {
   "name": "@orama/plugin-astro",
   "description": "An Astro integration for Orama",
-  "version": "3.0.4",
-  "keywords": ["astro", "astro-component", "cms", "orama", "search"],
+  "version": "3.0.5",
+  "keywords": [
+    "astro",
+    "astro-component",
+    "cms",
+    "orama",
+    "search"
+  ],
   "repository": "https://github.com/oramasearch/orama",
   "author": {
     "name": "Andres Correa Casablanca",
@@ -23,7 +29,9 @@
     }
   },
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "swc --delete-dir-on-start -s -w --extensions .ts -d dist src",
     "build": "swc --delete-dir-on-start --extensions .ts -d dist src",
