--- a/packages/plugin-docusaurus/package.json
+++ b/packages/plugin-docusaurus/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@orama/plugin-docusaurus",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Docusaurus plugin for local search powered by Orama",
-  "keywords": ["orama", "docusaurus"],
+  "keywords": [
+    "orama",
+    "docusaurus"
+  ],
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/oramasearch/orama/issues"
