--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@orama/switch",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Orama Switch allows you to run queries on Orama Cloud and OSS with a single interface",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -13,12 +13,17 @@
       "types": "./dist/index.d.ts"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup",
     "test": "tsx --test tests/answer-session.test.ts && tsx --test tests/search.test.ts"
   },
-  "keywords": ["orama", "orama cloud"],
+  "keywords": [
+    "orama",
+    "orama cloud"
+  ],
   "type": "module",
   "author": {
     "name": "Michele Riva",
