--- a/packages/plugin-data-persistence/package.json
+++ b/packages/plugin-data-persistence/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@orama/plugin-data-persistence",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Data persistence plugin for Orama",
   "type": "module",
   "sideEffects": false,
@@ -20,14 +20,20 @@
     }
   },
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "swc --delete-dir-on-start -s -w --extensions .ts,.cts -d dist src",
     "build": "swc --delete-dir-on-start --extensions .ts,.cts -d dist src",
     "postbuild": "sh scripts/postbuild.sh",
     "test": "c8 -c test/config/c8.json tap test/*.test.ts"
   },
-  "keywords": ["orama", "disk persistence", "full-text search"],
+  "keywords": [
+    "orama",
+    "disk persistence",
+    "full-text search"
+  ],
   "author": {
     "email": "michele.riva@oramasearch.com",
     "name": "Michele Riva",
