--- a/packages/plugin-nextra/package.json
+++ b/packages/plugin-nextra/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@orama/plugin-nextra",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Nextra plugin for local search powered by orama",
-  "keywords": ["orama", "nextra"],
+  "keywords": [
+    "orama",
+    "nextra"
+  ],
   "license": "Apache-2.0",
   "main": "./dist/index.js",
   "type": "module",
@@ -16,7 +19,9 @@
   },
   "sideEffects": false,
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "swc --delete-dir-on-start --extensions .ts,.tsx,.cts -d dist src",
     "lint": "eslint src --ext .js,.ts,.cts"
