--- a/packages/plugin-secure-proxy/package.json
+++ b/packages/plugin-secure-proxy/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@orama/plugin-secure-proxy",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Orama plugin for generating embeddings securely on the front-end",
-  "keywords": ["orama", "embeddings", "secure proxy", "vector search"],
+  "keywords": [
+    "orama",
+    "embeddings",
+    "secure proxy",
+    "vector search"
+  ],
   "license": "Apache-2.0",
   "main": "./dist/index.js",
   "type": "module",
@@ -24,7 +29,9 @@
   },
   "sideEffects": false,
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup --config tsup.lib.js",
     "lint": "exit 0",
