--- a/packages/plugin-vitepress/package.json
+++ b/packages/plugin-vitepress/package.json
@@ -1,8 +1,13 @@
 {
   "name": "@orama/plugin-vitepress",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "description": "Vitepress plugin for local search powered by orama",
-  "keywords": ["orama", "vite", "vitepress", "vue"],
+  "keywords": [
+    "orama",
+    "vite",
+    "vitepress",
+    "vue"
+  ],
   "license": "Apache-2.0",
   "main": "./dist/index.js",
   "type": "module",
@@ -16,7 +21,9 @@
   },
   "sideEffects": false,
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "swc --delete-dir-on-start --extensions .ts -d dist src",
     "postbuild": "tsc -p . --emitDeclarationOnly && cp ./src/Search.vue ./dist/Search.vue",
