--- a/packages/tokenizers/package.json
+++ b/packages/tokenizers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@orama/tokenizers",
-  "version": "3.0.4",
+  "version": "3.0.5",
   "type": "module",
   "description": "Additional tokenizers for Orama",
   "sideEffects": false,
@@ -19,7 +19,9 @@
   "dependencies": {
     "@orama/orama": "workspace:*"
   },
-  "files": ["build"],
+  "files": [
+    "build"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/oramasearch/orama"
